--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-select": "^2.0.0-alpha.6",
     "semantic-ui-react": "^0.78.3"
   },
   "scripts": {
