--- a/.gitattributes
+++ b/.gitattributes
@@ -6,6 +6,10 @@
 *.c text
 *.h text
 *.md text
+*.py text
+*.js text
+*.css text
+*.html test
 
 # Declare files that will always have CRLF line endings on checkout.
 *.sln text eol=crlf
