--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,16 +2,17 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000", 
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "axios": "^0.18.0",
+    "firebase": "^4.12.1",
     "prop-types": "^15.6.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
-    "react-select": "^2.0.0-alpha.6",
+    "react-scripts": "^1.1.1",
+    "react-select": "^2.0.0-alpha.8",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.78.3"
@@ -21,5 +22,13 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "redux-devtools": "^3.4.1"
   }
 }
